# naio

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.ps1  neko.config  niao.config
.cargo/: config.toml
benchmarks/: bench_full_results_0.2.2.txt  bench_results_0.2.2.txt  benchmark_full.py  benchmark_math.py  benchmark_nmongo.py  dsa_bench.neko  dsa_bench.nekobc  dsa_bench.niao  math_bench.neko  math_bench.niao  math_bench_heavy.js  math_bench_heavy.neko  math_bench_heavy.niao  (+9 more)
crates/ahiru_core/: Cargo.toml
crates/ahiru_core/src/: auth.rs  banner.rs  cache.rs  config.rs  context.rs  db.rs  glob.rs  groups.rs  handler.rs  jobs.rs  lib.rs  logging.rs  metrics.rs  middleware.rs  migrate.rs  native.rs  port.rs  response.rs  router.rs  server.rs  shutdown.rs  state.rs  test_client.rs  validation.rs  ws.rs  ws_hub.rs
crates/ahiru_core/tests/: request_throughput.rs
crates/neko_bytecode/: Cargo.toml
crates/neko_bytecode/src/: lib.rs  optimize.rs  wire.rs
crates/neko_cli/: Cargo.toml  app.db
crates/neko_cli/src/: cache.rs  main.rs
crates/neko_cli/src/ahiru/: add.rs  bench.rs  console.rs  create.rs  db.rs  doctor.rs  generate.rs  mod.rs  openapi.rs  serve.rs  test_cmd.rs  worker.rs
crates/neko_cli/tests/: integration.rs
crates/neko_llm/: Cargo.toml
crates/neko_llm/src/: candle_backend.rs  lib.rs  llama_backend.rs
crates/neko_ml/: Cargo.toml
crates/neko_ml/src/: autograd.rs  backward.rs  checkpoint.rs  columnar.rs  dataloader.rs  explain.rs  gnn.rs  layer.rs  lib.rs  loss.rs  model.rs  optimizer.rs  trainer.rs  tuning.rs
crates/neko_runtime/: Cargo.toml
crates/neko_runtime/src/: async_tasks.rs  dsa.rs  io.rs  json.rs  lib.rs  mem.rs  nenv.rs  nos.rs  oop.rs  re.rs  time.rs
crates/neko_runtime/src/ahiru/: app.rs  common.rs  ctx_bridge.rs  mod.rs  options.rs  pool.rs  stream.rs  v3_builtins.rs  vm_pool.rs
crates/neko_runtime/src/ncl/: bridge.rs  common.rs  groupby.rs  handles.rs  mod.rs  null.rs  rolling.rs  series.rs
crates/neko_runtime/src/net/: dns.rs  ftp.rs  handles.rs  http_client.rs  http_server.rs  mod.rs  smtp.rs  socket.rs  tls.rs  url.rs  websocket.rs
crates/neko_runtime/src/nllm/: common.rs  handles.rs  mod.rs
crates/neko_runtime/src/nml/: autograd.rs  bridge.rs  classic.rs  common.rs  data.rs  graph.rs  handles.rs  mod.rs  train.rs
crates/neko_runtime/src/nmongo/: aggregate.rs  bg.rs  bulk.rs  changestream.rs  common.rs  connection.rs  crud.rs  gridfs.rs  handles.rs  indexes.rs  mod.rs  ops.rs  runtime.rs  transactions.rs  types.rs
crates/neko_runtime/src/npg/: bg.rs  common.rs  config.rs  connection.rs  handles.rs  mod.rs  pg.rs  pool.rs  query.rs  schema.rs  stmt.rs  types.rs
crates/neko_runtime/src/nrag/: common.rs  handles.rs  mod.rs
crates/neko_runtime/src/nsqlite/: bg.rs  common.rs  connection.rs  handles.rs  mod.rs  query.rs  schema.rs  stmt.rs  types.rs
crates/neko_runtime/src/nvis/: chart.rs  mod.rs
crates/neko_runtime/src/parallel/: channel.rs  common.rs  mod.rs  mutex.rs  poll.rs  pool.rs  registry.rs  sendable.rs  thread.rs
crates/neko_tensor/: Cargo.toml
crates/neko_tensor/benches/: matmul.rs
crates/neko_tensor/src/: backend.rs  dtype.rs  lib.rs  pool.rs  shape.rs  tensor.rs
crates/neko_tensor/src/cpu/: kernels.rs  mod.rs
crates/neko_tensor/src/wgpu/: mod.rs
crates/neko_vm/: Cargo.toml
crates/neko_vm/src/: ahiru_pool.rs  call_bridge.rs  dsa_fast.rs  dsa_loops.rs  fast_val.rs  gc.rs  io_fast.rs  json_fast.rs  lib.rs  ncl_fast.rs  nml_fast.rs  nmongo_fast.rs  turbo.rs
crates/niao_bytecode/: Cargo.toml
crates/niao_bytecode/src/: lib.rs  optimize.rs  wire.rs
crates/niao_cli/: Cargo.toml
crates/niao_cli/src/: cache.rs  main.rs
crates/niao_cli/src/ahiru/: add.rs  bench.rs  console.rs  create.rs  db.rs  doctor.rs  generate.rs  mod.rs  openapi.rs  serve.rs  test_cmd.rs  worker.rs
crates/niao_cli/tests/: integration.rs
crates/niao_llm/: Cargo.toml
crates/niao_llm/src/: candle_backend.rs  device.rs  lib.rs  llama_backend.rs
crates/niao_ml/: Cargo.toml
crates/niao_ml/src/: autograd.rs  backward.rs  checkpoint.rs  columnar.rs  dataloader.rs  explain.rs  gnn.rs  layer.rs  lib.rs  loss.rs  model.rs  optimizer.rs  trainer.rs  tuning.rs
crates/niao_rag/: Cargo.toml
crates/niao_rag/src/: lib.rs
crates/niao_runtime/: Cargo.toml
crates/niao_runtime/src/: async_tasks.rs  dsa.rs  dsa_storage.rs  int_algos.rs  int_heap.rs  io.rs  json.rs  lib.rs  mem.rs  nenv.rs  nos.rs  oop.rs  re.rs  time.rs
crates/niao_runtime/src/ahiru/: app.rs  common.rs  ctx_bridge.rs  mod.rs  pool.rs  stream.rs  v3_builtins.rs  vm_pool.rs  vm_serve.rs
crates/niao_runtime/src/ncl/: algos.rs  bridge.rs  column.rs  common.rs  dtypes.rs  frame.rs  handles.rs  io.rs  join.rs  linalg.rs  math.rs  mod.rs  ndarray.rs  parallel.rs  reshape.rs  stats.rs
crates/niao_runtime/src/net/: dns.rs  ftp.rs  handles.rs  http_client.rs  http_server.rs  mod.rs  smtp.rs  socket.rs  tls.rs  url.rs  websocket.rs
crates/niao_runtime/src/nllm/: common.rs  handles.rs  mod.rs
crates/niao_runtime/src/nml/: autograd.rs  bridge.rs  classic.rs  common.rs  data.rs  graph.rs  handles.rs  mod.rs  train.rs
crates/niao_runtime/src/nmongo/: aggregate.rs  bg.rs  bulk.rs  changestream.rs  common.rs  connection.rs  crud.rs  gridfs.rs  handles.rs  indexes.rs  mod.rs  ops.rs  transactions.rs  types.rs
crates/niao_runtime/src/npg/: bg.rs  common.rs  config.rs  connection.rs  handles.rs  mod.rs  pg.rs  pool.rs  query.rs  schema.rs  stmt.rs  types.rs
crates/niao_runtime/src/nrag/: common.rs  handles.rs  mod.rs
crates/niao_runtime/src/nsqlite/: bg.rs  common.rs  connection.rs  handles.rs  mod.rs  query.rs  schema.rs  stmt.rs  types.rs
crates/niao_runtime/src/nvis/: mod.rs
crates/niao_runtime/src/parallel/: channel.rs  common.rs  mutex.rs  poll.rs  pool.rs  registry.rs  sendable.rs  thread.rs
crates/niao_vm/: Cargo.toml
crates/niao_vm/src/: ahiru_pool.rs  call_bridge.rs  dsa_fast.rs  dsa_loops.rs  fast_val.rs  gc.rs  io_fast.rs  json_fast.rs  lib.rs  ncl_fast.rs  nllm_fast.rs  nml_fast.rs  nmongo_fast.rs  nrag_fast.rs  turbo.rs
(+416 files in other folders)
