[workspace]
resolver = "2"
members = [
    "crates/niao_ast",
    "crates/niao_errors",
    "crates/niao_lexer",
    "crates/niao_parser",
    "crates/niao_runtime",
    "crates/niao_interpreter",
    "crates/niao_ir",
    "crates/niao_bytecode",
    "crates/niao_vm",
    "crates/niao_format",
    "crates/niao_lint",
    "crates/niao_docs",
    "crates/niao_web",
    "crates/niao_cli",
    "crates/niao_pkg",
    "crates/niao_nm",
    "crates/ahiru_core",
    "crates/niao_tensor",
    "crates/niao_ml",
    "crates/niao_classic",
    "crates/niao_data",
    "crates/niao_graph",
    "crates/niao_rag",
    "crates/niao_llm",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["Niao Contributors"]

[workspace.dependencies]
niao_ast = { path = "crates/niao_ast" }
niao_errors = { path = "crates/niao_errors" }
niao_lexer = { path = "crates/niao_lexer" }
niao_parser = { path = "crates/niao_parser" }
niao_runtime = { path = "crates/niao_runtime", features = ["nmongo", "nrag", "nllm"] }
niao_interpreter = { path = "crates/niao_interpreter" }
niao_ir = { path = "crates/niao_ir" }
niao_bytecode = { path = "crates/niao_bytecode" }
niao_vm = { path = "crates/niao_vm" }
niao_format = { path = "crates/niao_format" }
niao_lint = { path = "crates/niao_lint" }
niao_docs = { path = "crates/niao_docs" }
niao_web = { path = "crates/niao_web" }
niao_pkg = { path = "crates/niao_pkg" }
ahiru_core = { path = "crates/ahiru_core" }
niao_nm = { path = "crates/niao_nm" }
niao_tensor = { path = "crates/niao_tensor" }
niao_ml = { path = "crates/niao_ml" }
niao_classic = { path = "crates/niao_classic" }
niao_data = { path = "crates/niao_data" }
niao_graph = { path = "crates/niao_graph" }
niao_rag = { path = "crates/niao_rag" }
niao_llm = { path = "crates/niao_llm" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
