[package]
name = "ahiru_core"
version.workspace = true
edition.workspace = true
description = "High-performance HTTP/WebSocket server core for Niao ahiru-server"

[dependencies]
axum = { workspace = true, features = ["ws", "multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "trace", "set-header", "compression-gzip", "compression-br", "fs"] }
http = "1"
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
dashmap = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
postgres = { version = "0.19", features = ["with-serde_json-1", "with-chrono-0_4"] }
r2d2_postgres = "0.18"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "postgres", "sqlite"] }
ahash = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

[features]
default = []
redis = ["dep:redis"]
