[package]
name = "neko_bytecode"
version.workspace = true
edition.workspace = true

[dependencies]
neko_ast = { workspace = true }
neko_ir = { workspace = true }
neko_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
neko_parser = { workspace = true }
