[package]
name = "neko_llm"
version.workspace = true
edition.workspace = true
description = "GGUF inference for Neko (nllm) via llama.cpp and Candle"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
candle-core = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }
tokenizers = "0.21"
hf-hub = { version = "0.4", default-features = false, features = ["ureq"] }
llama-cpp-2 = { version = "0.1.151", optional = true }
encoding_rs = { version = "0.8", optional = true }

[features]
default = []
llama = ["dep:llama-cpp-2", "dep:encoding_rs"]
cuda = ["candle-core/cuda", "candle-transformers/cuda", "llama-cpp-2/cuda"]
