[package]
name = "neko_tensor"
version.workspace = true
edition.workspace = true
description = "High-performance tensor engine for NML"

[dependencies]
rayon = "1"
matrixmultiply = "0.3"
rand = "0.8"
rand_distr = "0.4"
candle-core = { version = "0.8", optional = true }

[features]
default = ["cpu"]
cpu = []
cuda = ["dep:candle-core", "candle-core/cuda"]
cuda-f16 = ["cuda"]
wgpu = ["dep:candle-core"]
openblas = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "matmul"
harness = false
