[package]
name = "neko_vm"
version.workspace = true
edition.workspace = true

[dependencies]
cranelift-codegen = "0.133.1"
cranelift-frontend = "0.133.1"
cranelift-jit = "0.133.1"
cranelift-module = "0.133.1"
cranelift-native = "0.133.1"
ahiru_core = { workspace = true }
neko_ast = { workspace = true }
neko_bytecode = { workspace = true }
neko_ir = { workspace = true }
neko_runtime = { workspace = true }
neko_errors = { workspace = true }
num-bigint = "0.4"

[dev-dependencies]
neko_parser = { workspace = true }
