[package]
name = "niao_llm"
version.workspace = true
edition.workspace = true
description = "GGUF inference for Niao (nllm) via llama.cpp and Candle"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
candle-core = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }
tokenizers = "0.21"
hf-hub = { version = "0.5", default-features = false, features = ["ureq", "rustls-tls"] }
llama-cpp-2 = { version = "0.1.151", optional = true, features = ["common", "openmp"] }
llama-cpp-sys-2 = { version = "0.1.151", optional = true }
encoding_rs = { version = "0.8", optional = true }

[features]
default = []
llama = ["dep:llama-cpp-2", "dep:llama-cpp-sys-2", "dep:encoding_rs"]
cuda = ["candle-core/cuda", "candle-transformers/cuda", "llama-cpp-2/cuda", "llama-cpp-sys-2/cuda"]
vulkan = ["llama-cpp-2/vulkan", "llama-cpp-sys-2/vulkan"]
