[package]
name = "niao_rag"
version.workspace = true
edition.workspace = true
description = "Vector RAG index + embeddings for Niao (nrag)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastembed = { version = "5", features = ["directml"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["directml", "download-binaries"] }
thiserror = "2"
rayon = "1"
ureq = "2"
