[package]
name = "niao_rag"
version.workspace = true
edition.workspace = true
description = "Vector RAG index + embeddings for Niao (nrag)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastembed = { version = "5", default-features = false, features = ["directml", "hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["directml", "download-binaries", "tls-rustls"] }
thiserror = "2"
rayon = "1"
ureq = "2"
