[package]
name = "niao_runtime"
version.workspace = true
edition.workspace = true

[dependencies]
niao_ast = { workspace = true }
niao_errors = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ahash = "0.8"
ureq = { version = "2", features = ["tls", "native-certs"] }
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pki-types = "1"
url = "2"
httparse = "1"
tiny_http = "0.12"
tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
lettre = { version = "0.11", default-features = false, features = ["rustls-tls", "smtp-transport", "builder"] }
suppaftp = { version = "6", features = ["rustls"] }
socket2 = { version = "0.5", features = ["all"] }
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
rusqlite = { version = "0.32", features = ["bundled", "backup", "blob", "functions", "limits"] }
rayon = "1"
mongodb = { version = "3.1", optional = true }
bson = { version = "2.13", optional = true }
futures = { version = "0.3", optional = true }
ahiru_core = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
postgres = { version = "0.19", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
r2d2 = "0.8"
r2d2_postgres = "0.18"
niao_tensor = { path = "../niao_tensor" }
niao_ml = { path = "../niao_ml" }
niao_classic = { path = "../niao_classic" }
niao_data = { path = "../niao_data" }
niao_graph = { path = "../niao_graph" }
niao_rag = { path = "../niao_rag", optional = true }
niao_llm = { path = "../niao_llm", optional = true }

[features]
default = []
nmongo = ["dep:mongodb", "dep:bson", "dep:futures"]
nrag = ["dep:niao_rag"]
nllm = ["dep:niao_llm"]
nllm-llama = ["nllm", "niao_llm/llama"]
nllm-cuda = ["nllm", "nllm-llama", "niao_llm/cuda"]
nllm-vulkan = ["nllm", "nllm-llama", "niao_llm/vulkan"]
nml-cuda = ["niao_tensor/cuda", "niao_ml/cuda"]
nml-wgpu = ["niao_tensor/wgpu", "niao_ml/wgpu"]
